<?xml version="1.0"?>
<package format="3">
  <name>aruco_navigator</name>
  <version>0.0.0</version>
  <description>Python-based ArUco navigation package</description>

  <maintainer email="ayush@example.com">Ayush</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
