<?xml version="1.0"?>
<package format="3">
  <name>coordinate_follower</name>
  <version>0.0.0</version>
  <description>Coordinate follower with ROS 2 Actions</description>
  <maintainer email="ayush@example.com">ayush</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    
  </export>
</package>
